完善消息中心功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,6 @@ my.token.secret=abcdefghijklmnopqrstuvwxyz
 # 令牌标识符
 # 修改时需同时修改前端模块中的标识符字段
 my.token.header=X-Token
+
+# 用户密码过期时间（天）
+my.user.password.expire_time=30
