添加系统配置功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ mybatis.config-location=classpath:mybatis/mybatis-config.xml
 logging.level.com.rbac=debug
 logging.level.org.springframework=warn
 logging.level.org.springframework.security=warn
+logging.level.org.springframework.mail=debug
 
 # rsa 公钥和私钥，用户网络上加密传输敏感数据
 # 修改时需同时修改前端模块中的公钥和私钥
