添加全局api异常拦截器

--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -26,7 +26,7 @@ spring.redis.jedis.pool.min-idle=0
 spring.redis.timeout=5000
 
 # email
-# email配置以数据库sys_config表配置优先
+# email配置以数据库sys_configuration表配置优先
 spring.mail.host=smtp.qq.com
 spring.mail.from=yourqq@qq.com
 spring.mail.username=yourqq@qq.com
