更新配置项位置

--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -33,3 +33,7 @@ spring.mail.username=yourqq@qq.com
 spring.mail.password=yourpassword
 spring.mail.port=466
 spring.mail.properties.mail.smtp.ssl.enable=true
+
+## File Storage Properties
+# Please change this to the path where you want the uploaded files to be stored.
+file.upload-dir=/Users/wlfei/Documents/temp
