精简了邮件配置功能

--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -25,8 +25,7 @@ spring.redis.jedis.pool.min-idle=0
 # 连接超时时间（毫秒）
 spring.redis.timeout=5000
 
-# email
-# email配置以数据库sys_configuration表配置优先
+# email配置
 spring.mail.host=smtp.qq.com
 spring.mail.from=yourqq@qq.com
 spring.mail.username=yourqq@qq.com
